adaptação para api de TC5

--- a/src/auth/login/login.component.html
+++ b/src/auth/login/login.component.html
@@ -5,19 +5,18 @@
       <div class="signup">
         <form>
           <label for="chk" aria-hidden="true">Cadastrar</label>
-          <input type="text" name="txt" placeholder="User name" required="">
-          <input type="email" name="email" placeholder="Email" required="">
-          <input type="number" name="broj" placeholder="BrojTelefona" required="">
-          <input type="password" name="pswd" placeholder="Password" required="">
-          <button>Cadastrar</button>
+          <input type="text" name="txt" [(ngModel)]="user.nome" placeholder="User name" required="">
+          <input type="email" name="email" [(ngModel)]="user.email" placeholder="Email" required="">
+          <input type="password" name="pswd" [(ngModel)]="user.senha" placeholder="Password" required="">
+          <button (click)="register()">Cadastrar</button>
         </form>
       </div>
   
       <div class="login">
         <form>
           <label for="chk" aria-hidden="true">Login</label>
-          <input type="email" name="EmailId" [(ngModel)]="model.username" placeholder="Email" required="">
-          <input type="password" name="Password" [(ngModel)]="model.password" placeholder="Password" required="">
+          <input type="email" name="EmailId" [(ngModel)]="model.email" placeholder="Email" required="">
+          <input type="password" name="Password" [(ngModel)]="model.senha" placeholder="Password" required="">
           <button (click)="login()">Login</button>
         </form>
       </div>
