--- a/src/app/portfolio/tela-inicial/tela-inicial.component.html
+++ b/src/app/portfolio/tela-inicial/tela-inicial.component.html
@@ -1,1 +1,23 @@
-<p>tela-inicial works!</p>
+<div class="portfolio-list-container">
+    <mat-card *ngFor="let portfolio of portfolios" class="portfolio-card" (click)="selectPortfolio(portfolio)">
+      <mat-card-header>
+        <mat-card-title>{{ portfolio.nome }}</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <p>{{ portfolio.descricao }}</p>
+      </mat-card-content>
+    </mat-card>
+  
+    <mat-card *ngIf="selectedPortfolio" class="assets-card">
+      <mat-card-header>
+        <mat-card-title>Ativos do Portfolio: {{ selectedPortfolio.nome }}</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <ul>
+          <li *ngFor="let ativo of selectedPortfolio.ativos">
+            {{ ativo | json }} <!-- Substitua pelo formato desejado -->
+          </li>
+        </ul>
+      </mat-card-content>
+    </mat-card>
+  </div>
