--- a/src/app/portfolio/tela-inicial/tela-inicial.component.html
+++ b/src/app/portfolio/tela-inicial/tela-inicial.component.html
@@ -1,23 +1,19 @@
+
 <div class="portfolio-list-container">
-    <mat-card *ngFor="let portfolio of portfolios" class="portfolio-card" (click)="selectPortfolio(portfolio)">
-      <mat-card-header>
-        <mat-card-title>{{ portfolio.nome }}</mat-card-title>
-      </mat-card-header>
-      <mat-card-content>
-        <p>{{ portfolio.descricao }}</p>
-      </mat-card-content>
-    </mat-card>
-  
-    <mat-card *ngIf="selectedPortfolio" class="assets-card">
-      <mat-card-header>
-        <mat-card-title>Ativos do Portfolio: {{ selectedPortfolio.nome }}</mat-card-title>
-      </mat-card-header>
-      <mat-card-content>
-        <ul>
-          <li *ngFor="let ativo of selectedPortfolio.ativos">
-            {{ ativo | json }} <!-- Substitua pelo formato desejado -->
-          </li>
-        </ul>
-      </mat-card-content>
-    </mat-card>
-  </div>
+  <mat-toolbar>
+    <span>Portfolios</span>
+  </mat-toolbar>
+    <!-- Card para cada portfólio -->
+  <mat-card *ngFor="let portfolio of portfolios" class="portfolio-card" (click)="goToPortfolioDetails(portfolio)">
+    <mat-card-header>
+      <mat-card-title>{{ portfolio.nome }}</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <mat-icon class="portfolio-icon">account_balance_wallet</mat-icon> <!-- Ícone no meio do card -->
+    </mat-card-content>
+    <mat-card-content>
+      <p>{{ portfolio.descricao }}</p>
+    </mat-card-content>
+  </mat-card>
+
+</div>
