--- a/src/app/portfolio/tela-inicial/tela-inicial.component.scss
+++ b/src/app/portfolio/tela-inicial/tela-inicial.component.scss
@@ -1,17 +1,43 @@
 .portfolio-list-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 16px;
-  }
-  
-  .portfolio-card {
-    width: 300px;
-    cursor: pointer;
-    margin-bottom: 16px;
-  }
-  
-  .assets-card {
-    width: 100%;
-    margin-top: 16px;
-  }
-  
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+}
+
+.portfolio-card {
+  width: 300px;
+  cursor: pointer;
+  margin-bottom: 16px;
+
+  // Centraliza o conteúdo dentro do card
+  display: flex;
+  flex-direction: column; /* Organiza os itens em coluna */
+  justify-content: center; /* Centraliza verticalmente */
+  align-items: center; /* Centraliza horizontalmente */
+}
+
+.assets-card {
+  width: 100%;
+  margin-top: 16px;
+}
+
+mat-card-header {
+  display: flex;
+  justify-content: center; /* Centraliza horizontalmente */
+  align-items: center; /* Centraliza verticalmente */
+  text-align: center; /* Centraliza o texto */
+}
+
+mat-card-content {
+  display: flex;
+  justify-content: center; /* Centraliza horizontalmente */
+  align-items: center; /* Centraliza verticalmente */
+  flex-direction: column; /* Mantém o conteúdo em coluna */
+  text-align: center; /* Centraliza o texto */
+}
+
+mat-toolbar {
+  background-color: white; /* Define o fundo branco */
+  color: black; /* Ajuste a cor do texto se necessário */
+  border-bottom: 1px solid #ddd; /* Adiciona uma borda inferior, opcional */
+}
