--- a/src/app/portfolio/tela-inicial/tela-inicial.component.scss
+++ b/src/app/portfolio/tela-inicial/tela-inicial.component.scss
@@ -16,6 +16,31 @@
   align-items: center; /* Centraliza horizontalmente */
 }
 
+.add-portfolio-card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 300px;
+  height: 150px;
+  cursor: pointer;
+  margin-bottom: 16px;
+  background-color: #f0f0f0;
+  border: 1px dashed #ccc;
+  text-align: center;
+}
+
+.add-portfolio-card mat-card-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.portfolio-icon {
+  font-size: 40px;
+  color: #757575;
+}
+
 .assets-card {
   width: 100%;
   margin-top: 16px;
