--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <mat-toolbar *ngIf="showNavbar" class="custom-toolbar">
-  <button mat-button routerLink="/" aria-label="Home">
+  <button mat-button routerLink="portfolio/tela-inicial" aria-label="Home">
     <mat-icon>home</mat-icon>
   </button>
   <span>Sistema de Gestão de Investimentos</span>
   <span class="spacer"></span>
-  <button mat-button routerLink="/login">Login</button>
+  <button mat-button routerLink="/ativos">Ativos</button>
   <button mat-button routerLink="/register">Register</button>
   <button mat-icon-button [matMenuTriggerFor]="menu">
     <mat-icon>more_vert</mat-icon>
