inclusão de lista de transações e demais ajustes.

--- a/src/app/ativos/lista-ativos/lista-ativos.component.scss
+++ b/src/app/ativos/lista-ativos/lista-ativos.component.scss
@@ -15,4 +15,21 @@
     color: black; /* Ajuste a cor do texto se necessário */
     border-bottom: 1px solid #ddd; /* Adiciona uma borda inferior, opcional */
   }
+
+  mat-card-actions {
+    display: flex;
+    justify-content: flex-end; /* Alinha os botões à direita */
+    gap: 10px; /* Espaçamento entre os botões */
+    margin-top: auto; /* Empurra os botões para o final do card */
+  }
+  
+  button[mat-stroked-button] {
+    border: 1px solid rgba(0, 0, 0, 0.12); /* Borda ao redor dos botões */
+    padding: 8px 16px; /* Espaçamento interno nos botões */
+    border-radius: 4px; /* Borda arredondada (opcional) */
+  }
+  
+  button[mat-stroked-button]:hover {
+    border-color: rgba(0, 0, 0, 0.25); /* Muda a cor da borda no hover */
+  }
   
