--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,13 +5,11 @@
   <span>Sistema de Gestão de Investimentos</span>
   <span class="spacer"></span>
   <button mat-button routerLink="/ativos">Ativos</button>
-  <button mat-button routerLink="/register">Register</button>
+  <button mat-button routerLink="/ativos/transacoes">Transações</button>
   <button mat-icon-button [matMenuTriggerFor]="menu">
     <mat-icon>more_vert</mat-icon>
   </button>
   <mat-menu #menu="matMenu">
-    <button mat-menu-item routerLink="/profile">Profile</button>
-    <button mat-menu-item routerLink="/settings">Settings</button>
     <button mat-menu-item (click)="logout()">Logout</button>
   </mat-menu>
 </mat-toolbar>
