--- a/src/app/ativos/lista-ativos/lista-ativos.component.html
+++ b/src/app/ativos/lista-ativos/lista-ativos.component.html
@@ -13,8 +13,8 @@
         <p>Tipo: {{ ativo.ativoTipo.nome }}</p>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-button color="primary" (click)="openTransactionModal(ativo, 'comprar')">Comprar</button>
-        <button mat-button color="warn" (click)="openTransactionModal(ativo, 'vender')">Vender</button>
+        <button mat-stroked-button color="primary" (click)="openTransactionModal(ativo, 'comprar')">Comprar</button>
+        <button mat-stroked-button color="warn" (click)="openTransactionModal(ativo, 'vender')">Vender</button>
       </mat-card-actions>
     </mat-card>
   </div>
