--- a/src/app/portfolio/portfolio-details/portfolio-details.component.scss
+++ b/src/app/portfolio/portfolio-details/portfolio-details.component.scss
@@ -29,5 +29,12 @@
     border-bottom: 1px solid #ddd; /* Adiciona uma borda inferior, opcional */
     margin-bottom: 16px;
   }
+
+  .no-ativos-message {
+    text-align: center;
+    margin-top: 20px;
+    font-size: 18px;
+    color: #666;
+  }
   
   
